# componga

./: .gitignore  README.md  appveyor.yml  componga.code-workspace  requirements.txt
logos/: icon.drawio  logos.drawio  logos2.drawio
resources/linux/: componga.desktop
scripts/linux/: componga-linux.spec
scripts/windows/: CMakeLists.txt  componga-windows.spec
src/: main.py
src/componga/: __main__.py  app.py  componga.ini  componga.kv  componga.py
src/componga/constants/: constants.py
src/componga/experimental/: chroma.py  code_snippets.py  kitten.py  playground.py  transparent_window.py
src/componga/shapes/: __init__.py  arrowpath.py  arrowstraight.py  baseshape.py  blip.py  ellipse.py  linestraight.py  path.py  rectangle.py
src/componga/systray/: __init__.py  launcher.py
src/componga/ui/: __init__.py  drawsurface.py  menu.py
src/componga/util/: __init__.py  constants.py  functions.py  mixins.py  screenshot.py
src/componga/util/screeninfo/: common.py  screeninfo.py  util.py
src/componga/util/screeninfo/enumerators/: __init__.py  cygwin.py  drm.py  osx.py  windows.py  xinerama.py  xrandr.py
src/componga/widgets/: contextmenu.py
src/componga/windows/: compongawindow.py
